# jkzomaar-elections

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  sqlx-data.json
frontend/: .env.development  .env.production  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Router.tsx  index.tsx
frontend/src/components/: Admin.tsx  ElectionResults.tsx  VoteBooth.tsx
migrations/: 20210607112754_initial_setup.down.sql  20210607112754_initial_setup.up.sql
src/: elections.rs  errors.rs  main.rs  websocket.rs
