[package]
name = "jkzomaar-elections"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-threadpool = "0.3"
actix-web = "3"
actix-web-actors = "3"
anyhow = "1.0"
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4", features = [ 
    "postgres",
    "time",
    "runtime-actix-rustls",
    "migrate",
    "macros",
    "offline",
    "uuid",
]}
time = { version = "0.2", features = ["serde"]}

log = "0.4"
env_logger = "0.8"

qrcodegen = "1.6"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
